This file documents the revision history for Perl extension Mojolicious.

2.57    2012-03-03 00:00:00
        - Improved documentation.

2.56    2012-03-01 00:00:00
        - Deprecated custom HTTPS listen values in favor of URLs for all
          built-in web servers.
            https://*:3000:/x/server.crt:/y/server.key:/z/ca.crt
          becomes
            https://*:3000?cert=/x/server.crt&key=/y/server.key&ca=/z/ca.crt
        - Removed experimental status from patch function in
          Mojolicious::Lite.
        - Removed experimental status from patch method in
          Mojolicious::Routes.
        - Removed experimental status from patch method in Mojo::UserAgent.
        - Removed experimental status from patch_ok method in Test::Mojo.
        - Removed experimental status from t function in ojo.
        - Improved documentation.
        - Fixed small inconsistency between Mojo::IOWatcher and
          Mojo::IOWatcher::EV where Mojo::IOWatcher wouldn't stop
          automatically when not watching for events anymore.
        - Fixed Mojo::IOLoop to clean up after itself.

2.55    2012-02-28 00:00:00
        - Combined WebSocket timeout with normal inactivity timeout.
        - Improved documentation.

2.54    2012-02-27 00:00:00
        - Deprecated class and method stash values in favor of controller and
          action.
        - Added EXPERIMENTAL patch function to Mojolicious::Lite.
        - Added EXPERIMENTAL patch method to Mojolicious::Routes.
        - Added EXPERIMENTAL patch method to Mojo::UserAgent.
        - Added EXPERIMENTAL patch_ok method to Test::Mojo.
        - Added EXPERIMENTAL t function to ojo.
        - Added support for MOJO_CONNECT_TIMEOUT, MOJO_INACTIVITY_TIMEOUT,
          MOJO_REQUEST_TIMEOUT and MOJO_WEBSOCKET_TIMEOUT environment
          variables.
        - Split up Mojolicious::Guides::Cheatsheet into more reference
          documentation.
        - Increased default connect timeout from 3 to 10 seconds in