@@ -76,9 +76,7 @@ sub body_params {
   # "x-application-urlencoded" and "application/x-www-form-urlencoded"
   my $type = $self->headers->content_type || '';
   if ($type =~ m#(?:x-application|application/x-www-form)-urlencoded#i) {
-    my $asset = $self->content->asset;
-    return $params if $asset->is_file;
-    $params->parse($asset->slurp);
+    $params->parse($self->content->asset->slurp);
   }
 
   # "multipart/formdata"
@@ -481,9 +479,7 @@ sub _parse_formdata {
 
     # Form value
     unless (defined $filename) {
-      my $asset = $part->asset;
-      next if $asset->is_file;
-      $value = $asset->slurp;
+      $value = $part->asset->slurp;
       $value = decode($charset, $value) // $value
         if $charset && !$part->headers->content_transfer_encoding;
     }
@@ -585,7 +581,10 @@ to L<Mojo::JSON>.
   $message = $message->max_message_size(1024);
 
 Maximum message size in bytes, defaults to the value of the
-C<MOJO_MAX_MESSAGE_SIZE> environment variable or C<5242880>.
+C<MOJO_MAX_MESSAGE_SIZE> environment variable or C<5242880>. Increasing this
+value can also drastically increase memory usage, should you for example
+attempt to parse an excessively large message body with C<body_params>,
+C<dom> or C<json>.
 
 =head2 C<version>
 
@@ -624,8 +623,7 @@ Access C<content> data or replace all subscribers of the C<read> event.
 
 C<POST> parameters extracted from C<x-application-urlencoded>,
 C<application/x-www-form-urlencoded> or C<multipart/form-data> message body,
-usually a L<Mojo::Parameters> object. For security reasons only data that
-does not exceed L<Mojo::Asset::Memory/"max_memory_size"> will be parsed.
+usually a L<Mojo::Parameters> object.
 
   say $message->body_params->param('foo');
 
