@@ -1,6 +1,8 @@
 This file documents the revision history for Perl extension Mojolicious.
 
 2.57    2012-03-03 00:00:00
+        - Replaced protection from excessively large form values in
+          Mojo::Message with documentation.
         - Improved documentation.
 
 2.56    2012-03-01 00:00:00
